# computer-vision

./: .gitignore  README.md  compile.txt
lab1/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
lab2/: CMakeLists.txt  helper_functions.cpp  helper_functions.h  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
lab3/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
lab4/: CMakeLists.txt  EventStruct.hpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  trackBarsFuncs.cpp  trackBarsFuncs.hpp
lab5/: CMakeLists.txt  helper_funcs.cpp  helper_funcs.hpp  task1.cpp  task2.cpp  task3.cpp
